# woolworther

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.py
countdowner/: __init__.py  cli.py  main.py
countdowner/data/: bad_watchlist.csv  watchlist.csv
ipynb/: examples.ipynb
notebooks/: examples.ipynb  prototyping.ipynb
notebooks/.ipynb_checkpoints/: examples-checkpoint.ipynb  prototyping-checkpoint.ipynb
tests/: context.py  test_cli.py  test_main.py
tests/data/: bad_watchlist.csv  watchlist.csv  watchlist.yaml
woolworther/: __init__.py  main.py
