[tool.poetry]
name = "countdowner"
version = "4.1.1"
description = "A library to check for sales at Countdown grocery stores throughout New Zealand."
authors = ["Alex Raichev <alex@raichev.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8||^3.9"
requests = "<3"
pandas = "<2"
lxml = "^4.5.1"
yagmail = "<1"
keyring = "^21.2.1"
titlecase = "^1.1.1"

[tool.poetry.dev-dependencies]
jupyter = "<2"
pytest = "<7"
responses = "^0.10.14"
python-dotenv = "^0.13.0"
pre-commit = "^2.5.1"
black = "^19.10b0"
nbstripout = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
