[tool.poetry]
name = "woolworther"
version = "4.2.0"
description = "A library to check for sales at Woolworths grocery stores throughout New Zealand."
authors = ["Alex Raichev <alex@raichev.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
requests = ">=2"
pandas = ">=2"
lxml = ">=4.5.1"
yagmail = ">=0"
keyring = ">=21.2.1"
titlecase = ">=1.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1"
pytest = ">=7"
responses = ">=0.10.14"
python-dotenv = ">=0.13.0"
pre-commit = ">=2.5.1"
black = ">=19.10b0"
nbstripout = ">=0.4.0"
ruff = ">=0.4.7"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E402", "E501", "F401", "F403"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
