[project]
name = "woolworther"
version = "4.2.2"
description = "A library to check for sales at Woolworths grocery stores throughout New Zealand."
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Alex Raichev", email = "alex@raichev.net" },
]
dependencies = [
    "requests>=2",
    "pandas>=2",
    "lxml>=4.5.1",
    "yagmail>=0",
    "keyring>=21.2.1",
    "titlecase>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1",
    "pytest>=7",
    "responses>=0.10.14",
    "python-dotenv>=0.13.0",
    "pre-commit-uv>=0",
    "nbstripout>=0.4.0",
    "ruff>=0.4.7",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = ["E402", "E501", "F401", "F403"]
exclude = ["*.ipynb"]

[tool.setuptools]
packages = ["woolworther"]
